<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".MemberJoinActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/member_join"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

            <EditText
                android:id="@+id/nameETXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/name"
                android:text="@string/none"
                tools:ignore="TouchTargetSizeCheck" />


            <EditText
                android:id="@+id/emailETXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@string/none"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />


            <EditText
                android:id="@+id/idETXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/id"
                android:text="@string/none"
                tools:ignore="TouchTargetSizeCheck" />


            <EditText
                android:id="@+id/pwETXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/pw"
                android:inputType="textPassword"
                tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        >

        <Button
            android:id="@+id/joinBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:onClick="joinclick"
            android:text="@string/ok"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/cancelBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:onClick="joinclick"
            android:text="@string/cancel"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>



</LinearLayout>